--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,6 +5,21 @@
     <title>List of Owners</title>
 </head>
 <body>
+    <h1 th:text="'List of Owners'">Index Page</h1>
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>First name</th>
+                <th>Last name</th>
+            </tr>
+            <tbody>
+            <tr th:each="owner : ${ownerList}">
+                <td th:text="${owner.id}"></td>
+                <td th:text="${owner.firstName}"></td>
+                <td th:text="${owner.lastName}"></td>
+            </tr>
+            </tbody>
 
+        </table>
 </body>
 </html>
