--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -5,6 +5,22 @@
     <title>List Of Vets</title>
 </head>
 <body>
+<!--/*@thymesVar id="vet" type="dbpetclinicdata.model.Vet"*/-->
+<h1 th:text="'List of Vets'">Index Page</h1>
+<table>
+    <tr>
+        <th>ID</th>
+        <th>First name</th>
+        <th>Last name</th>
+    </tr>
+    <tbody>
+    <tr th:each="vet : ${vetList}">
+        <td th:text="${vet.id}"></td>
+        <td th:text="${vet.firstName}"></td>
+        <td th:text="${vet.lastName}"></td>
+    </tr>
+    </tbody>
 
+</table>
 </body>
 </html>
