copying static resources. closes #17

--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -5,6 +5,6 @@
     <title>Pet Clinic Index</title>
 </head>
 <body>
-    <h1 th:text="asda">Index Page</h1>
+    <h1 th:text="'Indexon Page'">Index Page</h1>
 </body>
 </html>
