--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>List of Owners</title>
 </head>
 <body>
-    <h1 th:text="'List of Owners'">Index Page</h1>
-        <table>
-            <tr>
-                <th>ID</th>
-                <th>First name</th>
-                <th>Last name</th>
-            </tr>
-            <tbody>
-            <tr th:each="owner : ${ownerList}">
-                <td th:text="${owner.id}"></td>
-                <td th:text="${owner.firstName}"></td>
-                <td th:text="${owner.lastName}"></td>
-            </tr>
-            </tbody>
+    <h2>Owners</h2>
 
-        </table>
+    <table id="owners" class="table table-striped">
+        <thead>
+        <tr>
+            <th style="width: 150px;">ID</th>
+            <th style="width: 200px;">Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="owner : ${ownerList}">
+            <td th:text="${owner.id}"/>
+            <td>
+                <a th:href="@{/owners/__${owner.id}__}" th:text="${owner.firstName + ' ' + owner.lastName}"/></a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
