--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
     <meta charset="UTF-8">
     <title>List Of Vets</title>
 </head>
 <body>
-<!--/*@thymesVar id="vet" type="dbpetclinicdata.model.Vet"*/-->
-<h1 th:text="'List of Vets'">Index Page</h1>
-<table>
+<h2>Veterinarians</h2>
+
+<table id="vets" class="table table-striped">
+    <thead>
     <tr>
-        <th>ID</th>
-        <th>First name</th>
-        <th>Last name</th>
+        <th style="width: 150px;">ID</th>
+        <th style="width: 200px;">Name</th>
     </tr>
+    </thead>
     <tbody>
     <tr th:each="vet : ${vetList}">
-        <td th:text="${vet.id}"></td>
-        <td th:text="${vet.firstName}"></td>
-        <td th:text="${vet.lastName}"></td>
+        <td th:text="${vet.id}"/>
+        <td>
+            <a th:href="@{/owners/__${vet.id}__}" th:text="${vet.firstName + ' ' + vet.lastName}"/></a>
+        </td>
     </tr>
     </tbody>
-
 </table>
 </body>
 </html>
