--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -17,9 +17,8 @@
     <tbody>
     <tr th:each="vet : ${vetList}">
         <td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
-        <td><span th:each="specialty : ${vet.specialties}"
-                  th:text="${specialty.name + ' '}"/> <span
-                th:if="${vet.nrOfSpecialties == 0}">none</span></td>
+        <td><span th:each="specialty : ${vet.specialities}"
+                  th:text="${specialty.description + ' '}"/> <span/>
     </tr>
     </tbody>
 </table>
